--- a/.drone.yml
+++ b/.drone.yml
@@ -4,13 +4,13 @@ workspace:
 pipeline:
   start_slack:
     image: plugins/slack
-    channel: ground_control
+    channel: jenkins
     secrets: [slack_webhook]
     username: drone
     icon_url: https://avatars2.githubusercontent.com/u/2181346?s=200&v=4
     template: >
-      *start* {{repo.name}} build.
-      {{build.author}} give {{build.branch}} a little push.
+      *start* {{repo.name}}
+      *{{build.author}}* give *{{build.branch}}* a little push.
   builds:
     image: golang
     commands:
@@ -26,13 +26,13 @@ pipeline:
       - push
       - pull_request
   get_config:
-    image: gcr.io/mirrormedia-1470651750304/drone-cloud-sdk:test
+    image: gcr.io/mirrormedia-1470651750304/drone-cloud-sdk:latest
     secrets: [google_credentials]
     commands:
     - gcloud source repos clone default default
   publish:
     image: plugins/gcr
-    repo: mirrormedia-1470651750304/readr-restful
+    repo: mirrormedia-1470651750304/${DRONE_REPO_NAME}
     tag: ${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}
     previleged: true
     environment:
@@ -53,7 +53,7 @@ pipeline:
       - source: google_credentials
         target: token
     vars:
-      image: gcr.io/mirrormedia-1470651750304/readr-restful:${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}
+      image: gcr.io/mirrormedia-1470651750304/${DRONE_REPO_NAME}:${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}
       app: readr-rest
       tier: backend
     when:
@@ -61,7 +61,7 @@ pipeline:
       branch: dev
   finish_slack:
     image: plugins/slack
-    channel: ground_control
+    channel: jenkins
     secrets: [slack_webhook]
     username: drone
     icon_url: https://avatars2.githubusercontent.com/u/2181346?s=200&v=4
@@ -69,8 +69,8 @@ pipeline:
       status: [success, failure]
     template: >
       {{#success build.status}}
-        *success* {{repo.name}}:{{build.branch}} was well served.
-        Check out our new product - mirrormedia-1470651750304/readr-restful:${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}
+        *success* ${DRONE_REPO_NAME}:${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER} was well served.
+        Check out our new <https://gcr.io/mirrormedia-1470651750304/readr-restful|docker>
       {{else}}
-        Houston, we have a problem. Build <#{{build.number}}|${DRONE_BUILD_LINK}> failed. Fix me please, {{build.author}}
+        Houston, we have a problem. Build <${DRONE_BUILD_LINK}|#{{build.number}}>  failed. Fix me please, {{build.author}}
       {{/success}}
