--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 workspace:
   base: /go
-  path: src/github.com/ichiaohsu/readr-restful
+  path: src/github.com/readr-media/readr-restful
 pipeline:
   start_slack:
     image: plugins/slack
@@ -9,8 +9,11 @@ pipeline:
     username: drone
     icon_url: https://avatars2.githubusercontent.com/u/2181346?s=200&v=4
     template: >
-      *start* {{repo.name}}
+      *start* building *{{repo.name}}*.
       *{{build.author}}* give *{{build.branch}}* a little push.
+    when:
+      event: [push]
+
   builds:
     image: golang
     commands:
@@ -22,32 +25,32 @@ pipeline:
     - go test -v -cover
     - env GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -a -o app main.go
     when:
-      event:
-      - push
-      - pull_request
+      event: [push]
+      branch: [master, dev]
+
   get_config:
     image: gcr.io/mirrormedia-1470651750304/drone-cloud-sdk:latest
     secrets: [google_credentials]
     commands:
     - gcloud source repos clone default default
     when:
-      event: [pull_request]
+      event: [push]
+
   publish:
     image: plugins/gcr
     repo: mirrormedia-1470651750304/${DRONE_REPO_NAME}
     tag: ${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}
-    # previleged: true
     environment:
       - DOCKER_LAUNCH_DEBUG=true
     secrets: [google_credentials]
     when:
-      event: [pull_request]
+      event: [push]
+
   deploy_dev:
     image: nytimes/drone-gke:develop
     zone: asia-east1-a
     cluster: dev
     namespace: default
-    
     # For debugging
     dry_run: false
     verbose: true
@@ -59,18 +62,22 @@ pipeline:
       app: readr-rest
       tier: backend
     when:
-      event: [pull_request]
+      event: [push]
       branch: dev
+
   finish_slack:
     image: plugins/slack
     channel: jenkins
     secrets: [slack_webhook]
     username: drone
     icon_url: https://avatars2.githubusercontent.com/u/2181346?s=200&v=4
+    when:
+      status: [success, failure]
+      event: [push]
     template: >
       {{#success build.status}}
         *success* ${DRONE_REPO_NAME}:${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER} was well served.
         Check out our new <https://gcr.io/mirrormedia-1470651750304/readr-restful|docker>
       {{else}}
-        Houston, we have a problem. Build <${DRONE_BUILD_LINK}|#{{build.number}}>  failed. Fix me please, {{build.author}}
+        Houston, we have a problem. Build <${DRONE_BUILD_LINK}|#{{build.number}}> failed. Fix me please, {{build.author}}
       {{/success}}
