--- a/.drone.yml
+++ b/.drone.yml
@@ -19,6 +19,7 @@ pipeline:
     secrets: [google_credentials]
     commands:
     - gcloud source repos clone default default
+    - cp default/readr-restful/main.json config/main.json
     when:
       event: [push]
 
