Redis cache for post and post followers
1. When Insert/Delete/Update post or Add/Delete post follower, sync post data to redis for each operation.
2. Provide redis connection pool.
3. Set cron to update post cache data periodically.

--- a/.drone.yml
+++ b/.drone.yml
@@ -27,6 +27,8 @@ pipeline:
     image: golang
     commands:
     - make build-alpine
+    # - go get github.com/robfig/cron
+    # - go get github.com/garyburd/redigo/redis
     # - go get github.com/gin-gonic/gin
     # - go get github.com/readr-media/readr-restful/models
     # - go get github.com/go-sql-driver/mysql
