--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,30 @@ workspace:
   base: /go
   path: src/github.com/readr-media/readr-restful
 pipeline:
+  unit_test:
+    image: golang:1.9.2
+    commands:
+    - make test
+    when:
+      event: [pull_request]
+      branch: [master, dev]
+  
+  unit_test_result:
+    mage: plugins/slack
+    channel: jenkins
+    secrets: [slack_webhook]
+    username: drone
+    icon_url: https://avatars2.githubusercontent.com/u/2181346?s=200&v=4
+    template: >
+      {{#success build.status}}
+        Unit test ${DRONE_REPO_NAME} *success*.
+      {{else}}
+        Houston, we have a problem. Unit test ${DRONE_REPO_NAME} failed. 
+      {{/success}}
+    when:
+      event: [pull_request]
+      branch: [master, dev]
+
   start_slack:
     image: plugins/slack
     channel: jenkins
@@ -30,17 +54,6 @@ pipeline:
     image: golang
     commands:
     - make build-alpine
-    # - go get github.com/robfig/cron
-    # - go get github.com/garyburd/redigo/redis
-    # - go get github.com/gin-gonic/gin
-    # - go get github.com/readr-media/readr-restful/models
-    # - go get github.com/go-sql-driver/mysql
-    # - go get github.com/jmoiron/sqlx
-    # - go get github.com/spf13/viper
-    # - go get golang.org/x/crypto/scrypt
-    # - go get gopkg.in/gomail.v2
-    # - go test -v -cover
-    # - env GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -a -o app main.go
     when:
       event: [push]
       branch: [master, dev]
@@ -74,6 +87,25 @@ pipeline:
     when:
       event: [push]
       branch: dev
+  
+  # deploy_prod:
+  #   image: nytimes/drone-gke:develop
+  #   zone: asia-east1-a
+  #   cluster: prod-readr
+  #   namespace: default
+  #   # For debugging
+  #   dry_run: false
+  #   verbose: true
+  #   secrets:
+  #     - source: google_credentials
+  #       target: token
+  #   vars:
+  #     image: gcr.io/mirrormedia-1470651750304/${DRONE_REPO_NAME}:${DRONE_COMMIT_AUTHOR}_${DRONE_BUILD_NUMBER}
+  #     app: readr-restful
+  #     tier: backend
+  #   when:
+  #     event: [push]
+  #     branch: dev 
 
   finish_slack:
     image: plugins/slack
