--- a/.drone.yml
+++ b/.drone.yml
@@ -27,8 +27,10 @@ pipeline:
       branch: [master, dev]
 
   builds:
-    image: golang:1.8.5-alpine
+    image: golang:1.9-alpine
     commands:
+    - apk update
+    - apk add git make
     - make build-alpine
     # - go get github.com/robfig/cron
     # - go get github.com/garyburd/redigo/redis
