--- a/.drone.yml
+++ b/.drone.yml
@@ -21,7 +21,7 @@ pipeline:
     commands:
     - gcloud source repos clone default default
     - cp default/readr-restful/main.json config/main.json
-    - cp default/readr-restful/newsletter.html config/newsletter.html
+    - cp default/readr-restful/*.html config/
     when:
       event: [push]
       branch: [master, dev]
